# exercism

./: .gitignore  Exercism.sln  Exercism.userprefs  LICENSE  README.md  download-all-exercises.cmd  download-all-exercises.fsx  download-all-exercises.sh  download-user-exercise.cmd  download-user-exercise.fsx  download-user-exercise.sh  exercise  exercise.ps1  packages.config  paket.dependencies  submit-authored-solutions  test
8th/acronym/: HELP.md  README.md  acronym.8th  test.8th
8th/affine-cipher/: HELP.md  README.md  affine-cipher.8th  test.8th
8th/all-your-base/: HELP.md  README.md  all-your-base.8th  test.8th
8th/allergies/: HELP.md  README.md  allergies.8th  test.8th
8th/anagram/: HELP.md  README.md  anagram.8th  test.8th
8th/armstrong-numbers/: HELP.md  README.md  armstrong-numbers.8th  test.8th
8th/atbash-cipher/: HELP.md  README.md  atbash-cipher.8th  test.8th
8th/binary-search/: HELP.md  README.md  binary-search.8th  test.8th
8th/bob/: HELP.md  README.md  bob.8th  test.8th
8th/bottle-song/: HELP.md  README.md  bottle-song.8th  test.8th
8th/circular-buffer/: HELP.md  README.md  circular-buffer.8th  test.8th
8th/collatz-conjecture/: HELP.md  README.md  collatz-conjecture.8th  test.8th
8th/darts/: HELP.md  README.md  darts.8th  test.8th
8th/diamond/: HELP.md  README.md  diamond.8th  test.8th
8th/difference-of-squares/: HELP.md  README.md  difference-of-squares.8th  test.8th
8th/dnd-character/: HELP.md  README.md  dnd-character.8th  test.8th
c/: .gitignore
clojure/: .gitignore
clojurescript/: .gitignore
cobol/: .gitignore
coffeescript/: Exercism.coffeescript.csproj  test.bat
common-lisp/: .gitignore
cpp/: .gitignore  Exercism.cpp  Exercism.cpp.vcxproj
csharp/: .gitignore  Exercism.csharp.csproj  Exercism.csharp.csproj.DotSettings  Exercism.csharp.sln  Exercism.csharp.userprefs  build.fsx  csharp.sln  exercises.sln  packages.config
d/: .gitignore
elixir/: .gitignore
elm/: elm-package.json
erlang/: .gitignore
fortran/: .gitignore
fortran/raindrops/: CMakeLists.txt  HELP.md  README.md  raindrops.f90  raindrops_test.f90
fortran/raindrops/.exercism/: config.json  metadata.json
fsharp/: .gitignore  App.config  Exercism.fsharp.fsproj  Exercism.fsharp.sln  Exercism.fsharp.userprefs  build.fsx  exercises.sln  fsharp.sln  packages.config  paket.references
haskell/: .gitignore
java/: .gitignore
javascript/: Exercism.javascript.csproj  audit-fix.sh  test.bat  update-packages.sh
kotlin/: .gitattributes
perl5/: .gitignore
pharo-smalltalk/: .gitignore
python/: Exercism.python.pyproj  pytest.ini
reasonml/: .gitignore
ruby/: .rubocop.yml
scala/: .gitignore
typescript/: audit-fix.sh  bun.lockb  package.json  update-packages.sh
unison/: .gitignore
wasm/: .gitignore
wren/: .gitignore
(+15076 files in other folders)
